# chess-ai-v3

./: README.md
engine/: CMakeLists.txt  board.cpp  board.hpp  constants.cpp  constants.hpp  intelligence.cpp  intelligence.hpp  main.cpp  tests.cpp  tests.hpp  webmain.cpp
engine/include/: fastrand.h  server-http.hpp  termcolor.h
web/: bower.json  index.html
web/css/: index.css
